--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,13 +4,14 @@ version: 4.2.1
 repository: https://github.com/NearHuscarl/flutter_login
 
 environment:
-  sdk: '>=2.19.0 <4.0.0'
+  sdk: ">=2.19.0 <4.0.0"
 
 dependencies:
   another_flushbar: ^1.10.29
   another_transformer_page_view: ^2.0.0
   flutter:
     sdk: flutter
+  intl: any
   font_awesome_flutter: ^10.0.0
   intl_phone_number_input: ^0.7.2
   phone_numbers_parser: ^8.0.0
@@ -24,7 +25,6 @@ dev_dependencies:
     sdk: flutter
   lint: ^2.0.1
   mockito: ^5.0.16
-
 
 flutter:
   uses-material-design: true
